// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AbcResourceView__Field Should render empty field supplier-tags 1`] = `
<div
  className="ta-component abc-resource-view__field abc-resource-view__field_type_supplier-tags"
  data-lego="react"
  style={Object {}}
>
  <abc-resource-view__value>
    <abc-resource-view__empty />
  </abc-resource-view__value>
</div>
`;

exports[`AbcResourceView__Field Should render field supplier-tags 1`] = `
<div
  className="ta-component abc-resource-view__field abc-resource-view__field_type_supplier-tags"
  data-lego="react"
  style={Object {}}
>
  <abc-resource-view__value>
    <abc-resource-tags
      maxCount={Infinity}
      tags={
        Array [
          Object {
            "name": Object {
              "ru": "BAR",
            },
            "slug": "foo",
          },
        ]
      }
    />
  </abc-resource-view__value>
</div>
`;
